objects/PPM__c.object
<CustomObject>
    <description>used to log PPM info</description>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>PPM</relationshipLabel>
        <relationshipName>PPM</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPM_Description__c</fullName>
        <label>PPM Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPM_ID__c</fullName>
        <label>PPM ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPM_Link__c</fullName>
        <label>PPM Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PPM_Name__c</fullName>
        <label>PPM Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PPM</label>
    <nameField>
        <displayFormat>PPMRID-{0000000000}</displayFormat>
        <label>PPM Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>